# llm-eval-engine

./: .env.judges.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PHASE3_PLAN.md  README.md  audit_runs.py  audit_runs.sh  burn_in_log.txt  check_and_rerun.py  config.yaml  current_errors.txt  current_errors_utf8.txt  docker-compose.yml  errors_out.json  errors_out2.json  errors_out3.json  errors_out_utf8.json  extract_errors.py  get_links.py  implementation_plan.md  inspect_dom.py  lovable_audit_results.json  lovable_audit_results_sequential.json  main.py  phase2_validation_results.json  phase3_diagnostics_example.json  pyrightconfig.json  railway.toml  real_user_targets.json  requirements.enterprise.txt  requirements.txt  result_deep.json  result_fix.json  result_realworld_fix.json  result_vibe.json  run_real_user_suite.py  scratch_video.py  (+11 more)
aibreaker/: README.md  __init__.py  client.py  models.py  pyproject.toml
api/: __init__.py  _run.py  audit_logging.py  auth.py  auth_routes.py  concurrency_control.py  database.py  job_executor_phase_4b.py  job_queue.py  job_reliability.py  main.py  models.py  models_phase_4b.py  multi_judge.py  plans.py  rate_limit.py  routes.py  routes_dashboard.py  routes_phase_4b.py  routes_phase_6.py  scheduler.py  user_auth.py
artifacts/: classification_validation.json  deep_video.webm  fix_video.webm  task6_validation_report.json
configs/: ai_breaker_lab.yaml  calibration_targets.json  config.yaml  real_user_targets.json  test_targets.json  universal_config_schema.yaml
core/: __init__.py  agent_probe.py  agentic_evaluator.py  agentic_qa.py  app_classifier.py  debate_evaluator.py  diagnostics.py  energy_tracker.py  evaluator.py  gemini_judge.py  metrics.py  models.py  narrative.py  pipeline.py  providers.py  rag_evaluator.py  regression_monitor.py  report_builder.py  tool_connector_validator.py  web_agent.py  web_judge.py
dashboard/: App.jsx  review_dashboard.jsx
data/: camouflage_benchmark.json  customer_support.json  factual_questions.json  quality_gate_dataset.json  rag_qa.json  sample_dataset.csv
evaluators/: __init__.py  anthropic_evaluator.py  base_evaluator.py  gemini_evaluator.py  ollama_evaluator.py  openai_evaluator.py
files (7)/: PROMPT_FOR_AI_ASSISTANT.md  real_user_audit.yml  run_real_user_suite.py
github-action/: _run.py  action.yml
reports/: compliance_report.py  report_generator.py
scripts/: debug_ecommerce_single.py  drift_monitor.py  generate_auth_secret.py  generate_targets_secret.py  quality_gate.py  run_calibration_suite.py  run_real_user_suite.py  test_phase3b_task1_integration.py  test_phase3b_task2_integration.py  test_phase3b_task3_integration.py  test_phase4b_burn_in.py  test_phase4b_scheduler_burn_in.py  test_phase5_5_reality_check.py  validate_classification.py  validate_phase0.py  validate_phase2.py  validate_phase3.py  validate_phase3b_task1.py  validate_phase3b_task6.py
src/: arabic_test_generator.py  config.py  evaluator.py  judge.py  main.py  metrics.py  target_adapter.py  test_generator.py
tests/: conftest.py  test_agentic_qa_v1.py  test_all.py  test_arabic_generator.py  test_cache.py  test_client.py  test_pii_masking.py  test_pipeline.py  test_recovery.py  test_routes.py
validators/: __init__.py  base.py  fusing_registry.py  (+3 more)
(+155 files in other folders)
