[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aibreaker"
version = "0.1.0"
description = "Official Python SDK for AI Breaker Lab"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "evaluation", "adversarial", "testing", "ai"]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7", "responses>=0.25", "pytest-cov"]

[project.urls]
Homepage = "https://llm-eval-engine-production.up.railway.app"
Repository = "https://github.com/your-org/aibreaker"

[tool.setuptools]
packages = ["aibreaker"]

[tool.setuptools.package-dir]
aibreaker = "."
